--- a/extension/package.json
+++ b/extension/package.json
@@ -5,7 +5,7 @@
 	"license": "",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+		"url": "https://github.com/steciuk/state-viz.git"
 	},
 	"scripts": {
 		"build": "tsc --noEmit && vite build",
