--- a/extension/package.json
+++ b/extension/package.json
@@ -19,7 +19,8 @@
 	"dependencies": {
 		"construct-style-sheets-polyfill": "^3.1.0",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"vite-plugin-force-inline-module": "^0.0.5"
 	},
 	"devDependencies": {
 		"@rollup/plugin-typescript": "^8.5.0",
