--- a/lib/vite-plugin-inline-code/package.json
+++ b/lib/vite-plugin-inline-code/package.json
@@ -16,7 +16,7 @@
 		"dist"
 	],
 	"scripts": {
-		"dev": "vite",
+		"dev": "npm run build -- --watch",
 		"build": "tsc && vite build",
 		"preview": "vite preview"
 	},
