--- a/demo/multi-entry/package.json
+++ b/demo/multi-entry/package.json
@@ -13,6 +13,6 @@
 		"path": "^0.12.7",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5",
-		"vite-plugin-inline-code": "file:../../lib/vite-plugin-inline-code"
+		"vite-plugin-inline-imports": "^0.1.0"
 	}
 }
