--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -10,7 +10,7 @@
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"moduleResolution": "node",
-		"types": ["vite/client", "node"],
+		"types": ["vite/client"], // FIXME: ["vite/client", "node"] was giving a ts error. Check if even needed.
 		"noFallthroughCasesInSwitch": true,
 		"allowSyntheticDefaultImports": true,
 		"lib": ["dom", "dom.iterable", "esnext"],
