--- a/extension/package.json
+++ b/extension/package.json
@@ -17,6 +17,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"construct-style-sheets-polyfill": "^3.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
