Disable expand arrow next to components without visible children

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-	"cSpell.words": ["autoprefix", "newtab", "twind"]
+	"cSpell.words": [
+		"autoprefix",
+		"fontawesome",
+		"fortawesome",
+		"newtab",
+		"twind"
+	]
 }
