--- a/extension/package.json
+++ b/extension/package.json
@@ -50,7 +50,8 @@
 		"jest": "29.0.3",
 		"jest-environment-jsdom": "29.5.0",
 		"npm-run-all": "^4.1.5",
-		"prettier": "2.8.8",
+		"prettier": "^3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"rollup": "2.79.1",
 		"sass": "1.62.1",
 		"ts-jest": "29.0.2",
