--- a/extension/package.json
+++ b/extension/package.json
@@ -13,7 +13,8 @@
 		"build:hmr": "rollup --config utils/reload/rollup.config.ts",
 		"wss": "node utils/reload/initReloadServer.js",
 		"dev": "npm run build:hmr && (run-p wss build:watch)",
-		"test": "jest"
+		"test": "jest",
+		"format": "prettier --write \"src/**/*.{ts,tsx}\""
 	},
 	"type": "module",
 	"dependencies": {
