Update project to use typescript 5.2.2 and vitest

--- a/extension/.eslintrc
+++ b/extension/.eslintrc
@@ -8,7 +8,10 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:react-hooks/recommended"
+		"plugin:react-hooks/recommended",
+		"plugin:import/recommended",
+		"plugin:jsx-a11y/recommended",
+		"prettier"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
@@ -18,7 +21,14 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["react", "@typescript-eslint"],
+	"plugins": [
+		"react",
+		"@typescript-eslint",
+		"react-hooks",
+		"import",
+		"jsx-a11y",
+		"prettier"
+	],
 	"settings": {
 		"react": {
 			"version": "detect"
@@ -26,7 +36,7 @@
 	},
 	"rules": {
 		"react/react-in-jsx-scope": "off",
-		"no-unused-vars": "off",
+		"import/no-unresolved": "off",
 		"@typescript-eslint/no-unused-vars": [
 			"warn",
 			{
