--- a/extension/.prettierignore
+++ b/extension/.prettierignore
@@ -1,6 +1,11 @@
-node_modules
 dist
-build
-coverage
-.vscode
-*.log
+node_modules
+.gitignore
+.github
+.eslintignore
+.husky
+.nvmrc
+.prettierignore
+LICENSE
+*.md
+pnpm-lock.yaml
