--- a/extension/package.json
+++ b/extension/package.json
@@ -9,57 +9,65 @@
 	},
 	"scripts": {
 		"build": "tsc --noEmit && vite build",
-		"build:watch": "cross-env __DEV__=true vite build -w",
-		"build:hmr": "rollup --config utils/reload/rollup.config.ts",
+		"build:firefox": "tsc --noEmit && cross-env __FIREFOX__=true vite build",
+		"build:watch": "cross-env __DEV__=true vite build -w --mode development",
+		"build:firefox:watch": "cross-env __DEV__=true __FIREFOX__=true vite build -w --mode development",
+		"build:hmr": "rollup --config utils/reload/rollup.config.mjs",
 		"wss": "node utils/reload/initReloadServer.js",
 		"dev": "npm run build:hmr && (run-p wss build:watch)",
-		"test": "jest",
-		"format": "prettier --write \"src/**/*.{ts,tsx}\""
+		"dev:firefox": "npm run build:hmr && (run-p wss build:firefox:watch)",
+		"test": "vitest",
+		"lint": "eslint src --ext .ts",
+		"lint:fix": "npm run lint --fix",
+		"prettier": "prettier . --write"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"classnames": "^2.3.2",
-		"construct-style-sheets-polyfill": "^3.1.0",
+		"construct-style-sheets-polyfill": "3.1.0",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"webextension-polyfill": "0.10.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-typescript": "^8.5.0",
-		"@testing-library/react": "13.4.0",
+		"@rollup/plugin-typescript": "11.1.5",
+		"@testing-library/react": "14.0.0",
 		"@twind/core": "^1.1.3",
 		"@twind/preset-autoprefix": "^1.0.7",
 		"@twind/preset-tailwind": "^1.1.4",
-		"@types/chrome": "0.0.224",
-		"@types/jest": "29.0.3",
-		"@types/node": "18.15.11",
-		"@types/react": "18.0.21",
-		"@types/react-dom": "18.2.4",
-		"@types/ws": "^8.5.4",
-		"@typescript-eslint/eslint-plugin": "5.56.0",
-		"@typescript-eslint/parser": "5.38.1",
-		"@vitejs/plugin-react": "^4.1.0",
-		"chokidar": "^3.5.3",
-		"cross-env": "^7.0.3",
-		"eslint": "8.36.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "4.2.1",
-		"eslint-plugin-react": "7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"fs-extra": "11.1.0",
-		"jest": "29.0.3",
-		"jest-environment-jsdom": "29.5.0",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^3.1.0",
-		"prettier-plugin-tailwindcss": "^0.5.7",
-		"rollup": "2.79.1",
-		"sass": "1.62.1",
-		"ts-jest": "29.0.2",
-		"ts-loader": "9.4.2",
-		"typescript": "4.8.4",
-		"vite": "^4.4.10",
+		"@types/chrome": "0.0.251",
+		"@types/node": "20.8.10",
+		"@types/react": "18.2.37",
+		"@types/react-dom": "18.2.14",
+		"@types/ws": "8.5.8",
+		"@typescript-eslint/eslint-plugin": "6.10.0",
+		"@typescript-eslint/parser": "6.9.1",
+		"@vitejs/plugin-react": "4.2.0",
+		"chokidar": "3.5.3",
+		"cross-env": "7.0.3",
+		"eslint": "8.53.0",
+		"eslint-config-airbnb-typescript": "17.1.0",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-import": "2.29.0",
+		"eslint-plugin-jsx-a11y": "6.8.0",
+		"eslint-plugin-prettier": "5.0.1",
+		"eslint-plugin-react": "7.33.2",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"fs-extra": "11.1.1",
+		"jsdom": "^22.1.0",
+		"npm-run-all": "4.1.5",
+		"prettier": "3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.9",
+		"rollup": "4.3.0",
+		"sass": "1.69.5",
+		"ts-loader": "9.5.0",
+		"tslib": "2.6.2",
+		"typescript": "5.2.2",
+		"vite": "5.0.0",
 		"vite-plugin-inline-imports": "^0.1.0",
-		"ws": "8.13.0"
+		"vitest": "^0.34.6",
+		"ws": "8.14.2"
 	}
 }
