--- a/extension/.eslintrc
+++ b/extension/.eslintrc
@@ -10,7 +10,7 @@
 		"plugin:@typescript-eslint/recommended",
 		"plugin:react-hooks/recommended",
 		"plugin:import/recommended",
-		"plugin:jsx-a11y/recommended",
+		// "plugin:jsx-a11y/recommended",
 		"prettier"
 	],
 	"parser": "@typescript-eslint/parser",
@@ -26,7 +26,7 @@
 		"@typescript-eslint",
 		"react-hooks",
 		"import",
-		"jsx-a11y",
+		// "jsx-a11y",
 		"prettier"
 	],
 	"settings": {
