--- a/extension/package.json
+++ b/extension/package.json
@@ -65,9 +65,20 @@
 		"ts-loader": "9.5.0",
 		"tslib": "2.6.2",
 		"typescript": "5.2.2",
-		"vite": "5.0.0",
-		"vite-plugin-inline-imports": "^0.1.0",
+		"vite": "^5.0.7",
+		"vite-plugin-inline-imports": "^0.1.1",
 		"vitest": "^0.34.6",
 		"ws": "8.14.2"
+	},
+	"overrides": {
+		"@twind/core": {
+			"typescript": "$typescript"
+		},
+		"@twind/preset-autoprefix": {
+			"typescript": "$typescript"
+		},
+		"@twind/preset-tailwind": {
+			"typescript": "$typescript"
+		}
 	}
 }
