Disable console logs in prod and tests

--- a/extension/package.json
+++ b/extension/package.json
@@ -7,21 +7,21 @@
 		"type": "git",
 		"url": "https://github.com/steciuk/state-viz.git"
 	},
-  "//": [
-    "// TODO: if https://github.com/probil/vitest-chrome/pull/1 is merged, remove patch-package and the postinstall script",
-    "// TODO: one day, those scripts will be used to build the extension for Firefox :)",
-    "\"build:firefox\": \"tsc --noEmit && cross-env __FIREFOX__=true vite build\"",
-    "\"build:firefox:watch\": \"cross-env __DEV__=true __FIREFOX__=true vite build -w --mode development\"",
-    "\"dev:firefox\": \"npm run build:hmr && (run-p wss build:firefox:watch)\""
-  ],
+	"//": [
+		"// TODO: if https://github.com/probil/vitest-chrome/pull/1 is merged, remove patch-package and the postinstall script",
+		"// TODO: one day, those scripts will be used to build the extension for Firefox :)",
+		"\"build:firefox\": \"tsc --noEmit && cross-env __FIREFOX__=true vite build\"",
+		"\"build:firefox:watch\": \"cross-env __DEV__=true __FIREFOX__=true vite build -w --mode development\"",
+		"\"dev:firefox\": \"npm run build:hmr && (run-p wss build:firefox:watch)\""
+	],
 	"scripts": {
-    "postinstall": "patch-package",
+		"postinstall": "patch-package",
 		"build": "tsc --noEmit && vite build",
 		"build:watch": "cross-env __DEV__=true vite build -w --mode development",
 		"build:hmr": "rollup --config utils/reload/rollup.config.mjs",
 		"wss": "node utils/reload/initReloadServer.js",
 		"dev": "npm run build:hmr && (run-p wss build:watch)",
-		"test": "vitest",
+		"test": "vitest --silent",
 		"lint": "eslint src --ext .ts",
 		"lint:fix": "npm run lint --fix",
 		"prettier": "prettier . --write"
@@ -73,6 +73,7 @@
 		"typescript": "5.2.2",
 		"vite": "^5.0.7",
 		"vite-plugin-inline-imports": "^0.1.1",
+		"vite-plugin-remove-console": "^2.2.0",
 		"vitest": "^0.34.6",
 		"vitest-chrome": "^0.1.0",
 		"ws": "8.14.2"
