--- a/extension/package.json
+++ b/extension/package.json
@@ -21,7 +21,9 @@
 		"build:hmr": "rollup --config utils/reload/rollup.config.mjs",
 		"wss": "node utils/reload/initReloadServer.js",
 		"dev": "npm run build:hmr && (run-p wss build:watch)",
-		"test": "vitest --silent",
+		"test": "vitest run --silent",
+		"test:watch": "vitest --silent",
+		"test:coverage": "vitest run --silent --coverage --reporter=json --outputFile=./test-output.json && prettier --write test-output.json",
 		"lint": "eslint src --ext .ts",
 		"lint:fix": "npm run lint --fix",
 		"prettier": "prettier . --write"
@@ -50,6 +52,7 @@
 		"@typescript-eslint/eslint-plugin": "6.10.0",
 		"@typescript-eslint/parser": "6.9.1",
 		"@vitejs/plugin-react": "4.2.0",
+		"@vitest/coverage-v8": "^1.6.0",
 		"chokidar": "3.5.3",
 		"cross-env": "7.0.3",
 		"eslint": "8.53.0",
