--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
 	"cSpell.words": [
-		"autoprefix",
-		"fontawesome",
-		"fortawesome",
-		"newtab",
-		"sidepanel",
-		"twind",
-		"webextension"
+    "autoprefix",
+    "fontawesome",
+    "fortawesome",
+    "newtab",
+    "sidepanel",
+    "stateviz",
+    "twind",
+    "webextension"
   ]
 }
