Add demo Todos app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
-	"cSpell.words": [
+  "cSpell.words": [
     "autoprefix",
     "fontawesome",
     "fortawesome",
     "newtab",
     "sidepanel",
     "stateviz",
+    "todos",
     "twind",
     "webextension"
   ]
