--- a/extension/.eslintrc
+++ b/extension/.eslintrc
@@ -35,6 +35,7 @@
 		}
 	},
 	"rules": {
+    "no-console": "error",
 		"react/react-in-jsx-scope": "off",
 		"import/no-unresolved": "off",
 		"@typescript-eslint/no-unused-vars": [
